--- a/.github/workflows/update-asset.yml
+++ b/.github/workflows/update-asset.yml
@@ -10,8 +10,7 @@ jobs:
         platform: [ ubuntu-latest ]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Install Go
-        if: success()
+      - name: Install Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
