build: add status

--- a/.github/workflows/update-asset.yml
+++ b/.github/workflows/update-asset.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
+          git status
           git add namedivider-python/assets/
           git commit -m "chore: update assets" -a
           git push
