chore: update release setting

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -2,18 +2,22 @@
 # Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
-    # You may remove this if you don't use go modules.
     - go mod tidy
-    # you may remove this if you don't need go generate
-    - go generate ./...
 builds:
   - env:
       - CGO_ENABLED=0
+    main: ./cmd/seimei
+    ldflags:
+      - -s -w
+      - -X main.Version={{.Version}}
+      - -X main.Revision={{.ShortCommit}}
+    binary: ./dist
     goos:
       - linux
       - windows
       - darwin
 archives:
+  - name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
   - replacements:
       darwin: Darwin
       linux: Linux
